shelf-text: prevent overflow

--- a/app/modules/shelves/scss/_shelves_list.scss
+++ b/app/modules/shelves/scss/_shelves_list.scss
@@ -15,6 +15,8 @@
         height: 3em;
       }
       .shelf-text{
+        max-height: 3em;
+        overflow: hidden;
         padding: 0.5em;
         @include display-flex(column);
         .name{
